[gd_scene load_steps=21 format=2]

[ext_resource path="res://Fonts/baloo/Baloo-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/baloo64.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/UI/ColorSelector.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/UI/SoundsLabel.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/UI/ExitButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/UI/MusicLabel.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/TitleOptions.gd" type="Script" id=7]
[ext_resource path="res://Scripts/TitleEggSpawner.gd" type="Script" id=8]
[ext_resource path="res://Scenes/UI/Transition.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scripts/PlayerOptions.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = -4
extra_spacing_char = -6
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = -8
extra_spacing_char = -1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 62
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = -4
extra_spacing_char = -2
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 62
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = -4
extra_spacing_char = -2
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 64
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = -4
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 64
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = -4
font_data = ExtResource( 1 )

[sub_resource type="MeshTexture" id=4]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="DynamicFont" id=10]
size = 62
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = -4
extra_spacing_char = -2
font_data = ExtResource( 1 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1568.0
margin_bottom = 882.0
color = Color( 0.631373, 0.54902, 0.768627, 1 )

[node name="TitleEggSpawner" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="TitleOptions" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 7 )

[node name="Title" type="Label" parent="TitleOptions"]
margin_left = 537.5
margin_top = 183.0
margin_right = 1030.5
margin_bottom = 337.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 1, 0.52549, 0.956863, 1 )
custom_fonts/font = SubResource( 1 )
text = "EGG DROP!!!"
align = 1
valign = 1

[node name="Version" type="Label" parent="TitleOptions"]
margin_left = 537.5
margin_top = 293.0
margin_right = 1030.5
margin_bottom = 336.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0.545098, 1, 0.67451, 1 )
custom_fonts/font = SubResource( 2 )
text = "Solo Prototype"
align = 1
valign = 1

[node name="MainButton" type="Button" parent="TitleOptions"]
margin_left = 537.5
margin_top = 363.0
margin_right = 1030.5
margin_bottom = 464.0
focus_mode = 0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0.980392, 1, 0.243137, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.980392, 1, 0.243137, 1 )
custom_colors/font_color_pressed = Color( 1, 0.713726, 0.0862745, 1 )
custom_fonts/font = SubResource( 9 )
enabled_focus_mode = 0
text = "SOLO GAME"
flat = true

[node name="OnlineButton" type="Button" parent="TitleOptions"]
margin_left = 537.5
margin_top = 433.0
margin_right = 1030.5
margin_bottom = 534.0
custom_colors/font_color_disabled = Color( 0.603922, 0.603922, 0.603922, 1 )
custom_colors/font_color_focus = Color( 0.980392, 1, 0.243137, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.980392, 1, 0.243137, 1 )
custom_colors/font_color_pressed = Color( 1, 0.713726, 0.0862745, 1 )
custom_fonts/font = SubResource( 3 )
disabled = true
enabled_focus_mode = 0
text = "ONLINE GAME"
flat = true

[node name="SoundsLabel" parent="TitleOptions" instance=ExtResource( 4 )]

[node name="MusicLabel" parent="TitleOptions" instance=ExtResource( 6 )]

[node name="ExitButton" parent="TitleOptions" instance=ExtResource( 5 )]

[node name="PlayerOptions" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -784.0
margin_top = -441.0
margin_right = 784.0
margin_bottom = 441.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 2
script = ExtResource( 10 )

[node name="ColorBG" type="ColorRect" parent="PlayerOptions"]
margin_left = 719.0
margin_top = 298.0
margin_right = 1151.0
margin_bottom = 450.0
color = Color( 0, 0, 0, 0.588235 )

[node name="PreferredColor" type="Label" parent="PlayerOptions"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -149.0
margin_right = -72.0
margin_bottom = 15.0
custom_constants/line_spacing = -32
custom_fonts/font = SubResource( 6 )
text = "Preferred
Color:"
align = 2

[node name="ColorSelector" parent="PlayerOptions/PreferredColor" instance=ExtResource( 3 )]
anchor_left = 0.469
anchor_top = 0.544
anchor_right = 0.469
anchor_bottom = 0.544
margin_left = 190.168
margin_top = -75.216
margin_right = 742.168
margin_bottom = 332.784

[node name="DifficultyLabel" type="Label" parent="PlayerOptions"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = 23.0
margin_right = 59.0
margin_bottom = 121.0
custom_fonts/font = SubResource( 5 )
text = "Difficulty:"

[node name="DifficultyButton" type="OptionButton" parent="PlayerOptions/DifficultyLabel"]
anchor_left = 0.449
anchor_top = 0.5
anchor_right = 0.449
anchor_bottom = 0.5
margin_left = 167.749
margin_top = -52.0
margin_right = 458.749
margin_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.968627, 1, 0.670588, 1 )
custom_colors/font_color_pressed = Color( 0.996078, 1, 0.258824, 1 )
custom_fonts/font = ExtResource( 2 )
custom_icons/arrow = SubResource( 4 )
enabled_focus_mode = 0
text = "Easy"
flat = true
expand_icon = true
items = [ "Easy", null, false, 0, null, "Normal", null, false, 1, null, "Hard", null, false, 2, null, "Evil", null, false, 3, null ]
selected = 0

[node name="NameLabel" type="Label" parent="PlayerOptions"]
margin_left = 582.0
margin_top = 196.0
margin_right = 766.0
margin_bottom = 294.0
custom_fonts/font = ExtResource( 2 )
text = "Name:"

[node name="NameEdit" type="TextEdit" parent="PlayerOptions/NameLabel"]
margin_left = 196.0
margin_right = 986.0
margin_bottom = 96.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/line_spacing = 0
custom_constants/completion_lines = 0
custom_constants/completion_max_width = 0
custom_constants/completion_scroll_width = 0
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "You"
caret_block_mode = true
caret_blink = true

[node name="BackButton" type="Button" parent="PlayerOptions"]
margin_left = 520.0
margin_top = 583.0
margin_right = 770.0
margin_bottom = 684.0
focus_mode = 0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0.980392, 1, 0.243137, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.980392, 1, 0.243137, 1 )
custom_colors/font_color_pressed = Color( 1, 0.713726, 0.0862745, 1 )
custom_fonts/font = SubResource( 10 )
enabled_focus_mode = 0
text = "BACK"
flat = true

[node name="BeginButton" type="Button" parent="PlayerOptions"]
margin_left = 780.0
margin_top = 583.0
margin_right = 1030.0
margin_bottom = 684.0
focus_mode = 0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0.980392, 1, 0.243137, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.980392, 1, 0.243137, 1 )
custom_colors/font_color_pressed = Color( 1, 0.713726, 0.0862745, 1 )
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
text = "BEGIN!"
flat = true

[node name="Transition" parent="." instance=ExtResource( 9 )]

[connection signal="button_up" from="TitleOptions/MainButton" to="TitleOptions" method="_on_MainButton_button_up"]
[connection signal="button_down" from="TitleOptions/ExitButton" to="TitleOptions" method="_on_ExitButton_button_down"]
[connection signal="focus_entered" from="PlayerOptions/NameLabel/NameEdit" to="PlayerOptions" method="_on_NameEdit_focus_entered"]
[connection signal="text_changed" from="PlayerOptions/NameLabel/NameEdit" to="PlayerOptions" method="_on_NameEdit_text_changed"]
[connection signal="button_up" from="PlayerOptions/BackButton" to="PlayerOptions" method="_on_BackButton_button_up"]
[connection signal="button_up" from="PlayerOptions/BeginButton" to="PlayerOptions" method="_on_BeginButton_button_up"]
